# qa_guru_6.19

./: pyproject.toml
