[tool.poetry]
name = "qa-guru-6-19"
version = "0.1.0"
description = ""
authors = ["Xamman27 <xamman27@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_6"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc2"
pytest = "7.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
